--- a/DataAccessLayerBlackJack/DataAccessLayerBlackJack.csproj
+++ b/DataAccessLayerBlackJack/DataAccessLayerBlackJack.csproj
@@ -4,16 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{929BF975-AC3D-4B36-94F5-193937DB25FC}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>BlackJackApplication</RootNamespace>
-    <AssemblyName>BlackJackApplication</AssemblyName>
+    <ProjectGuid>{84623D5A-B235-4FD3-B4DC-BF2BC8981558}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>DataAccessLayerBlackJack</RootNamespace>
+    <AssemblyName>DataAccessLayerBlackJack</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -42,11 +40,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="ICardRepository.cs" />
+    <Compile Include="IHistoryRepository.cs" />
+    <Compile Include="IPlayerRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <ProjectReference Include="..\EntityBlackJack\EntityBlackJack.csproj">
+      <Project>{bb9bb5db-5b41-4e92-a454-9ae4e04c0ed4}</Project>
+      <Name>EntityBlackJack</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
