--- a/BlackJackApp.DAL/BlackJackApp.DataAccess.csproj
+++ b/BlackJackApp.DAL/BlackJackApp.DataAccess.csproj
@@ -53,6 +53,10 @@
     <Compile Include="Interfaces\IPlayerRepository.cs" />
     <Compile Include="Interfaces\IRoundRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\CardRepository.cs" />
+    <Compile Include="Repositories\GameRepository.cs" />
+    <Compile Include="Repositories\PlayerRepository.cs" />
+    <Compile Include="Repositories\RoundRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BlackJackApp.Entities\BlackJackApp.Entities.csproj">
@@ -63,6 +67,9 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
