--- a/BlackJackApp.Entities/packages.config
+++ b/BlackJackApp.Entities/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="AutoMapper" version="6.2.2" targetFramework="net461" />
   <package id="Dapper" version="1.50.5" targetFramework="net461" />
+  <package id="Dapper.Contrib" version="1.50.5" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
 </packages>
