--- a/BlackJackApp.ViewModels/packages.config
+++ b/BlackJackApp.ViewModels/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="6.2.2" targetFramework="net461" />
+  <package id="Dapper" version="1.50.5" targetFramework="net461" />
+  <package id="Dapper.Contrib" version="1.50.5" targetFramework="net461" />
 </packages>
