--- a/BlackJackApp.DAL/BlackJackApp.DataAccess.csproj
+++ b/BlackJackApp.DAL/BlackJackApp.DataAccess.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CardRepository.cs" />
     <Compile Include="Repositories\GameRepository.cs" />
+    <Compile Include="Repositories\HistoryRepository.cs" />
     <Compile Include="Repositories\PlayerRepository.cs" />
     <Compile Include="Repositories\RoundRepository.cs" />
   </ItemGroup>
