--- a/BlackJackApp.DAL/packages.config
+++ b/BlackJackApp.DAL/packages.config
@@ -3,5 +3,6 @@
   <package id="AutoMapper" version="6.2.2" targetFramework="net461" />
   <package id="Dapper" version="1.50.5" targetFramework="net461" />
   <package id="Dapper.Contrib" version="1.50.5" targetFramework="net461" />
+  <package id="Dapper.Mapper" version="2.0.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
 </packages>
