--- a/BlackJackApp.ViewModels/BlackJackApp.ViewModels.csproj
+++ b/BlackJackApp.ViewModels/BlackJackApp.ViewModels.csproj
@@ -55,11 +55,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CardServiceViewModel.cs" />
+    <Compile Include="Enums\PlayerRole.cs" />
     <Compile Include="Enums\WinnerFlag.cs" />
-    <Compile Include="GameDetailsViewModel.cs" />
     <Compile Include="GameServiceViewModel.cs" />
-    <Compile Include="GameViewModel.cs" />
-    <Compile Include="HistoryServiceViewModel.cs" />
     <Compile Include="RoundViewModel.cs" />
     <Compile Include="UserHistoryViewModel.cs" />
     <Compile Include="UserViewModel.cs" />
