--- a/BlackJackApp.Controllers/Web.config
+++ b/BlackJackApp.Controllers/Web.config
@@ -10,6 +10,9 @@
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
+  <connectionStrings>
+    <add name="BlackJackDb" connectionString="Data Source=DESKTOP-3M9Q6SI;Initial Catalog=BlackJackDb;Integrated Security=True" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
