--- a/BlackJackApp.DAL/BlackJackApp.DataAccess.csproj
+++ b/BlackJackApp.DAL/BlackJackApp.DataAccess.csproj
@@ -69,11 +69,13 @@
     <Compile Include="Interfaces\ICardRepository.cs" />
     <Compile Include="Interfaces\IGameRepository.cs" />
     <Compile Include="Interfaces\IPlayerRepository.cs" />
+    <Compile Include="Interfaces\IPlayersGameRepository.cs" />
     <Compile Include="Interfaces\IRoundRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\CardRepository.cs" />
     <Compile Include="Repositories\GameRepository.cs" />
     <Compile Include="Repositories\PlayerRepository.cs" />
+    <Compile Include="Repositories\PlayersGameRepository.cs" />
     <Compile Include="Repositories\RoundRepository.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -95,6 +97,13 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Scripts\jquery-1.8.0.intellisense.js" />
+    <Content Include="Scripts\jquery-1.8.0.js" />
+    <Content Include="Scripts\jquery-1.8.0.min.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
