--- a/BlackJackApp.ViewModels/packages.config
+++ b/BlackJackApp.ViewModels/packages.config
@@ -4,4 +4,6 @@
   <package id="Dapper" version="1.50.5" targetFramework="net461" />
   <package id="Dapper.Contrib" version="1.50.5" targetFramework="net461" />
   <package id="Dapper.Mapper" version="2.0.0" targetFramework="net461" />
+  <package id="jQuery" version="1.8.0" targetFramework="net461" />
+  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.5" targetFramework="net461" />
 </packages>
