--- a/BlackJackApp.Controllers/BlackJackApp.Controllers.csproj
+++ b/BlackJackApp.Controllers/BlackJackApp.Controllers.csproj
@@ -158,6 +158,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\GameApiController.cs" />
     <Compile Include="Controllers\GameController.cs" />
     <Compile Include="Controllers\HistoryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -212,6 +213,8 @@
     <Content Include="Views\History\ShowGames.cshtml" />
     <Content Include="Views\Game\StartGame.cshtml" />
     <Content Include="Views\Game\CurrentGame.cshtml" />
+    <Content Include="Views\Game\GameFinnished.cshtml" />
+    <Content Include="Views\Game\StartNextRoundForPlayers.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
