--- a/BlackJackApp.Controllers/Web.config
+++ b/BlackJackApp.Controllers/Web.config
@@ -11,7 +11,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="BlackJackDb" connectionString="Data Source=DESKTOP-3M9Q6SI;Initial Catalog=BlackJackDb;Integrated Security=True" />
+    <add name="BlackJackDb" connectionString="Data Source=DESKTOP-5KF2H8P\SQLEXPRESS;Initial Catalog=BlackJackDb;Integrated Security=True" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
@@ -52,7 +52,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.4.0" newVersion="5.2.4.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.4.0" newVersion="5.2.4.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.8.1.0" newVersion="4.8.1.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
